mejoras  ovdsaas agrego blockchain

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                     <a class="nav-item nav-link" href="/calculator/">Rep Calculator</a>
                     <a class="nav-item nav-link" href="/DOIschain/">DOIschain</a>
                     <a class="nav-item nav-link" href="/rif/">RIF(Research Impact)</a>
+                    <a class="nav-item nav-link" href="/certificate/">Blockchain certificate</a>
 
                 </div>
             </div>
