--- a/templates/rif.htm
+++ b/templates/rif.htm
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Search for a Publication and GitHub Repository</h1>
-    <form method="POST">
+    <form action="#" method="POST">
         <label for="title">Publication Title:</label><br>
         <input type="text" id="title" name="title" required><br><br>
 
