--- a/templates/trading.html
+++ b/templates/trading.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container mt-5">
         <h1>Select a Stock Ticker</h1>
-        <form method="POST">
+        <form action="#" method="POST">
             <div class="form-group">
                 <label for="ticker">Choose a stock:</label>
                 <select id="ticker" name="ticker" class="form-control">
